<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="@dimen/spacing_2x"
            android:padding="@dimen/spacing_2x"
            android:text="@string/login"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_login_24"
            app:iconPadding="@dimen/spacing_2x"
            app:strokeColor="@color/primaryColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="@dimen/spacing_2x"
            android:padding="@dimen/spacing_2x"
            android:text="@string/sign_up"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_app_registration_24"
            app:iconPadding="@dimen/spacing_2x"
            app:strokeColor="@color/primaryColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="@dimen/spacing_2x"
            android:padding="@dimen/spacing_2x"
            android:text="@string/about"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:icon="@drawable/ic_outline_info_24"
            app:iconPadding="@dimen/spacing_2x"
            app:strokeColor="@color/primaryColor" />


    </LinearLayout>
</layout>